2003-06-28  Gabriel Dos Reis <gdr@integrable-solutions.net>

	* diagnostic.c (output_integer_with_precision): New macro.
	(output_format): Use it.  Handle more format specifiers.
	(output_long_decimal): Remove.
	(output_unsigned_decimal): Likewise.
	(output_long_unsigned_decimal): Likewise.
	(output_octal): Likewise.
	(output_long_octal): Likewise.
	(output_hexadecimal): Likewise.
	(output_long_hexadecimal): Likewise.
	(output_long_long_decimal): Likewise.

2003-06-28  Andreas Schwab  <schwab@suse.de>

	* config/ia64/ia64.md: Follow recent emit_note API change.

2003-06-28  Nathan Sidwell  <nathan@codesourcery.com>

	* c-parse.in (%union): Replace filename & lineno with location.
	(save_filename, save_lineno): Remove.
	(save_location): New.
	(fndef, old_style_parm_decls_1, lineno_datadecl, lineno_decl,
	nested_function, notype_nested_function, if_prefix, lineno_stmt,
	lineno_label, label): Adjust.

2003-06-28  Jakub Jelinek  <jakub@redhat.com>

	* builtins.c (c_strlen): Add only_value argument.
	Handle COND_EXPR and COMPOUND_EXPR.
	(expand_builtin_strlen): Optimize also strlen (i++ ? "foo" : "bar").
	Adjust c_strlen callers.
	(expand_builtin_strcpy, expand_builtin_strncpy,
	expand_builtin_strcmp, expand_builtin_strncmp,
	expand_builtin_fputs, expand_builtin_sprintf,
	fold_builtin): Adjust c_strlen callers.

2003-06-28  Josef Zlomek  <zlomekj@suse.cz>

	* bb-reorder.c (find_traces_1_round): Do not send basic block
	to next round when we are in the last round.

2003-06-28  Neil Booth  <neil@daikokuya.co.uk>

	* Makefile.in: Update.
	* opts.c: Include tm_p.h.
	(handle_options): Make static.
	(decode_options): Copied from toplev.c.
	* opts.h (decode_options): New.
	* toplev.c (parse_options_and_default_flags): Move most to opts.c,
	some to...
	(general_init): ...here.
	(toplev_main): Use decode_options instead.
	* toplev.h (save_argc, save_argv): New.

2003-06-28  Kazu Hirata  <kazu@cs.umass.edu>

	* explow.c (find_next_ref): Remove.