@@ -2100,7 +2100,7 @@ dead_register_here (x, reg)
     x_reg = 0;
 
   for (p = PREV_INSN (x); p && GET_CODE (p) != CODE_LABEL; p = PREV_INSN (p))
-    if (GET_RTX_CLASS (GET_CODE (p)) == 'i')
+    if (INSN_P (p))
       {
 	rtx body;
 
@@ -5158,7 +5158,7 @@ m68hc11_reassign_regs (first)
 	  || GET_CODE (insn) == NOTE || GET_CODE (insn) == BARRIER)
 	continue;
 
-      if (GET_RTX_CLASS (GET_CODE (insn)) != 'i')
+      if (!INSN_P (insn))
 	continue;
 
       body = PATTERN (insn);
@@ -5287,7 +5287,7 @@ m68hc11_reorg ()
 
 	if (INSN_DELETED_P (insn))
 	  continue;
-	if (GET_RTX_CLASS (GET_CODE (insn)) != 'i')
+	if (!INSN_P (insn))
 	  continue;
 
 	/* Remove the (set (R) (R)) insns generated by some splits.  */
